--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hello World!</h1>
     <p>This is my first GitHub commit.</p>
     <!-- Students will edit the line below -->
-    <p>Message from: [Your Name Here]</p>
+    <p>First commit from Kristian Martinez</p>
   </body>
 </html>
